--- a/home.html
+++ b/home.html
@@ -1,17 +1,46 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Left4Dead4You</title>
+<title>Left4Dead4You</title>
+    <meta charset ="utf-8" />
     <link rel="stylesheet" href="css/slutprojekt.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-    <body>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="TheSurvivors.html">The Survivors</a></li>
-            <li><a href="TheInfected.html">The Infected</a></li>
-            <li><a href="Weapons.html">Weapons</a></li>
-        </ul>
-        <h1>Left4Dead4You</h1>
-        <img src="img/mainimg.webp" />
-    </body>
+<body>
+<div class="navtitle">Left4Dead4You</div>
+<nav class="nav">
+<ul class="navlist">
+	    <li><a href="home.html">Home</a></li>
+        <li><a href="TheSurvivors.html">The Survivors</a></li>
+        <li><a href="TheInfected.html">The Infected</a></li>
+        <li><a href="Weapons.html">Weapons</a></li>
+</ul>
+</nav>
+<div class="slideshow-container">
+
+    <div class="mySlides fade">
+      <img src="img/slideshow2.jpg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="img/slideshow3.jpg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="img/slideshow4.jpg" style="width:100%">
+    </div>
+  
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+    <script src="slutprojekt.js"></script>
+  </div>
+        <h1>In 2009 Vlave created the second game in the Left 4 Dead series. Left 4 dead 2 is a single-player and multiplayer firstperson shooter game. In the game you defeat levels playing as one of the four survivors. Nam velit velit, consequat condimentum erat id, vehicula porta risus. Aliquam ut odio ac sapien facilisis congue a ut risus. Morbi cursus leo nunc, ut bibendum est accumsan non. Curabitur ut nisl eget eros tincidunt porttitor ac vitae elit. Etiam ornare arcu eros, vel pulvinar erat faucibus non. Vivamus et tempus odio, et hendrerit nunc. Vestibulum blandit efficitur pulvinar. Nam semper vel massa cursus tincidunt. Mauris pharetra lacus vel enim congue, sit amet vulputate ante semper. Mauris vel ante nec ante aliquam tristique ut sit amet magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</h1>
+        <h2>Nick: "I am breathing shit air into my lungs, it is being absorbed into my bloodstream. I am literally full of shit." </h2>
+</body>
 </html>
