--- a/aboutus.html
+++ b/aboutus.html
@@ -1,1 +1,58 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+<title>left4dead4you.se</title>
+    <meta charset ="utf-8" />
+    <script src="js/slutprojekt.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet"  href="css/slutprojekt.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel&display=swap" rel="stylesheet">
+  <div class="topnav" id="myTopnav">
+    <a href="home.html">Home</a>
+    <a href="thesurvivors.html" >The Survivors</a>
+    <a href="theinfected.html">The Infected</a>
+    <a href="campaigns.html">Campaigns</a>
+    <a href="aboutus.html">About Us</a>
+    <a class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  <div class="header">
+    <header>About us</header>
+  </div>
+  <div class="aboutusleft">
+  <p></p>
+</div>
+  <a href="#main" class="skip">Skip to main content</a>
+  </head>
+<body>
+<p>Nunc a auctor ex. Sed convallis lacinia enim, id interdum justo eleifend at. Maecenas pellentesque mauris nec luctus feugiat. Nullam vitae eleifend purus. Curabitur ut eros vel ante mattis sollicitudin. Etiam rhoncus nisi sem, id faucibus lacus congue et. Suspendisse potenti.
+Cras tempor aliquam purus sit amet scelerisque. Pellentesque ut volutpat dolor. Quisque tincidunt leo arcu, a ultricies nunc posuere et.
+Donec congue ultrices quam quis tincidunt. Sed aliquam dui vel volutpat elementum. Suspendisse pharetra erat et ante aliquam tempor. Aliquam erat volutpat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum sit amet sem ut orci fringilla consequat.
+Praesent viverra dolor ac diam vehicula luctus vitae non ex. Aenean mollis sed purus eget bibendum. Vivamus tincidunt eu purus et vehicula. Praesent leo mauris, pulvinar quis laoreet posuere, molestie a ipsum. Curabitur bibendum augue vitae laoreet hendrerit. Nam quis urna vel orci pellentesque ornare vitae sit amet elit.</p>
+<p>Aliquam tincidunt lectus ut neque egestas tincidunt. Sed in turpis ipsum. Integer euismod ornare turpis non scelerisque. Maecenas venenatis massa sit amet turpis tincidunt, ut pretium lacus mattis. Integer tempor magna vel sapien auctor cursus. Phasellus id risus tempor, rhoncus mi id, feugiat mi.
+Aenean eros justo, eleifend et auctor eget, interdum at neque. Aliquam erat volutpat. Suspendisse mi purus, varius non feugiat non, cursus id dolor.
+Mauris id elit lacus. Quisque sed arcu lobortis, auctor neque sed, venenatis libero. Praesent egestas eu arcu sit amet condimentum. Maecenas auctor, nibh in mattis mattis, ipsum urna consectetur nunc, in pellentesque turpis tortor accumsan nisi. Nunc sed leo luctus, mollis risus ut, posuere tortor. Etiam sed finibus mauris.
+Duis pretium aliquet odio, et tincidunt nisi congue eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+
+
+
+
+
+
+</body>
+<h6>Text and pictures taken from Left 4 Dead Fandom</h6>
+<script>
+  function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+    </script>
+</html>
