--- a/home.html
+++ b/home.html
@@ -1,46 +1,61 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
-<title>Left4Dead4You</title>
+<title></title>
     <meta charset ="utf-8" />
-    <link rel="stylesheet" href="css/slutprojekt.css">
+    <script src="js/slutprojekt.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet"  href="css/slutprojekt.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel&display=swap" rel="stylesheet">
+
+  </div>
+  <div class="topnav" id="myTopnav">
+
+    <a href="home.html">Home</a>
+    <a href="thesurvivors.html" >The Survivors</a>
+    <a href="theinfected.html">The Infected</a>
+    <a href="campaigns.html">Campaigns</a>
+    <a href="aboutus.html">About Us</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+</div>
+<div class="header">
+  <header>Home Page</header>
+</div>
+<a href="#main" class="skip">Skip to main content</a>
 </head>
 <body>
-<div class="navtitle">Left4Dead4You</div>
-<nav class="nav">
-<ul class="navlist">
-	    <li><a href="home.html">Home</a></li>
-        <li><a href="TheSurvivors.html">The Survivors</a></li>
-        <li><a href="TheInfected.html">The Infected</a></li>
-        <li><a href="Weapons.html">Weapons</a></li>
-</ul>
-</nav>
-<div class="slideshow-container">
+<main id="main">
+    <p>In 2009 Vlave created the second game in the Left 4 Dead series. Left 4 dead 2 is a single-player and multiplayer firstperson shooter game. In the game you defeat levels playing as one of the four survivors. Nam velit velit, consequat condimentum erat id, vehicula porta risus. Aliquam ut odio ac sapien facilisis congue a ut risus. Morbi cursus leo nunc, ut bibendum est accumsan non. Curabitur ut nisl eget eros tincidunt porttitor ac vitae elit. Etiam ornare arcu eros, vel pulvinar erat faucibus non. Vivamus et tempus odio, et hendrerit nunc. Vestibulum blandit efficitur pulvinar. Nam semper vel massa cursus tincidunt. Mauris pharetra lacus vel enim congue, sit amet vulputate ante semper.
+      Mauris vel ante nec ante aliquam tristique ut sit amet magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ullamcorper sem eget dictum pharetra. Proin interdum est nunc, vitae facilisis nulla rhoncus a. Praesent sed odio faucibus, ultricies erat ut, fermentum nisi. Pellentesque quis nisl a magna consequat dictum sed sit amet velit. Nullam diam tortor, imperdiet quis est a, rutrum porta ligula. Donec at accumsan libero. Nunc eget odio at leo ornare suscipit. In cursus, est at laoreet tempus, erat urna venenatis nibh, sit amet laoreet ex velit eget odio. Integer mattis sapien neque, id blandit dui lacinia vitae. Nam velit velit, consequat condimentum erat id, vehicula porta risus. Aliquam ut odio ac sapien facilisis congue a ut risus. Morbi cursus leo nunc, ut bibendum est accumsan non. Curabitur ut nisl eget eros tincidunt porttitor ac vitae elit. Etiam ornare arcu eros, vel pulvinar erat faucibus non. Vivamus et tempus odio, et hendrerit nunc. Vestibulum blandit efficitur pulvinar. Nam semper vel massa cursus tincidunt. Mauris pharetra lacus vel enim congue, sit amet vulputate ante semper.</p>
+    <p>In hac habitasse platea dictumst. Cras posuere, leo sed facilisis pharetra, eros sapien gravida lorem, vel cursus metus ipsum sit amet ante. Etiam nec nulla velit. Praesent vehicula feugiat dolor, eu mollis magna malesuada ac.
+      Mauris vel ante nec ante aliquam tristique ut sit amet magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Aliquam ut odio ac sapien facilisis congue a ut risus. Morbi cursus leo nunc, ut bibendum est accumsan non. Curabitur ut nisl eget eros tincidunt porttitor ac vitae elit. Etiam ornare arcu eros, vel pulvinar erat faucibus non. Vivamus et tempus odio, et hendrerit nunc. Vestibulum blandit efficitur pulvinar. Nam semper vel massa cursus tincidunt. Mauris pharetra lacus vel enim congue, sit amet vulputate ante semper.</p>
+    <h1>From the same creators</h1>
+    <p>Nulla nec sem eleifend, accumsan nibh sit amet, imperdiet nunc. Curabitur et porttitor lorem, nec auctor tortor. Mauris sapien urna, cursus ut odio nec, venenatis gravida elit. Vestibulum sapien odio, mollis id risus et, ultrices hendrerit nisl. Donec cursus non quam ac ornare. Curabitur placerat justo commodo dignissim volutpat. Pellentesque auctor sem mauris, et laoreet tellus ultrices eget
+      Cras mollis ultrices mi, quis efficitur felis elementum vel. Maecenas in imperdiet lectus, sit amet auctor odio. Aliquam lacinia, quam non mattis tincidunt, lacus velit posuere mauris, aliquam convallis orci diam vitae risus.
+      Cras posuere, leo sed facilisis pharetra, eros sapien gravida lorem, vel cursus metus ipsum sit amet ante. Etiam nec nulla velit. Praesent vehicula feugiat dolor, eu mollis magna malesuada ac.Mauris vel ante nec ante aliquam tristique ut sit amet magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <div class="thegames">
+    <img src="img/b4b.jpg" alt="back4blood" class="b4b">
+    <img src="img/dl.jpg" alt="dyinglight" class="dl">
+    </div>
+</main>
+<h2>All pictures taken from Wallpaper Abyss</h2>
 
-    <div class="mySlides fade">
-      <img src="img/slideshow2.jpg" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="img/slideshow3.jpg" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="img/slideshow4.jpg" style="width:100%">
-    </div>
-  
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
 
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-    <script src="slutprojekt.js"></script>
-  </div>
-        <h1>In 2009 Vlave created the second game in the Left 4 Dead series. Left 4 dead 2 is a single-player and multiplayer firstperson shooter game. In the game you defeat levels playing as one of the four survivors. Nam velit velit, consequat condimentum erat id, vehicula porta risus. Aliquam ut odio ac sapien facilisis congue a ut risus. Morbi cursus leo nunc, ut bibendum est accumsan non. Curabitur ut nisl eget eros tincidunt porttitor ac vitae elit. Etiam ornare arcu eros, vel pulvinar erat faucibus non. Vivamus et tempus odio, et hendrerit nunc. Vestibulum blandit efficitur pulvinar. Nam semper vel massa cursus tincidunt. Mauris pharetra lacus vel enim congue, sit amet vulputate ante semper. Mauris vel ante nec ante aliquam tristique ut sit amet magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</h1>
-        <h2>Nick: "I am breathing shit air into my lungs, it is being absorbed into my bloodstream. I am literally full of shit." </h2>
+<script>
+  function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+      x.className += " responsive";
+    } else {
+      x.className = "topnav";
+    }
+  }
+  </script>
 </body>
 </html>
